# icarus-firmware

./: .gitignore  .gitmodules  Cargo.toml  README.md  justfile
.cargo/: config.toml
.devcontainer/: devcontainer.json
icarus/: Cargo.toml  memory.x
icarus-app/: Cargo.toml
icarus-app-std/: Cargo.toml  sdkconfig.defaults
icarus-app-std/.cargo/: config.toml
icarus-app-std/docs/: README.md
icarus-app-std/scripts/: flash.sh  run-wokwi.sh
icarus-app-std/src/: console.rs  lib.rs  main.rs  stat.rs  wifi.rs
icarus-app/src/: main.rs
icarus-cli/: Cargo.toml
icarus-cli/src/: cli.rs  lib.rs  main.rs
icarus-cli/src/actions/: command.rs  log.rs  mod.rs
icarus-comms/: Cargo.toml
icarus-comms/src/: lib.rs
icarus-core/: Cargo.toml
icarus-core/src/: data.rs  filter.rs  lib.rs
icarus-test/: Cargo.toml
icarus-test/.cargo/: config.toml
icarus-test/examples/: barometer.rs  blink.rs  imu.rs  motor_io.rs  pwm.rs  serial.rs  stat_led.rs  user_button.rs
icarus-test/src/: main.rs
icarus-wire/: Cargo.toml
icarus-wire/src/: lib.rs
icarus/src/: icarus.rs  lib.rs  sensors.rs  types.rs
scripts/: plot-attitude.py  plot-imu.py  serial-test.py
serial-ppp/: Cargo.toml
serial-ppp/src/: error.rs  lib.rs  reader.rs  rx.rs  tx.rs
