[workspace]
members = [
    "icarus",
    "icarus-app",
    "icarus-cli",
    "icarus-test",
    "icarus-comms",

    "serial-ppp",

    # External packages for patching crates.io
    "external/mpu6050",
    "external/defmt-bbq"
]

[patch.crates-io]
mpu6050 = {path = "external/mpu6050"}
# defmt-bbq = {path = "external/defmt-bbq"}
