[workspace]
members = [
    "icarus",
    "icarus-app",
    "icarus-cli",
    "icarus-test",
    "icarus-comms",

    "serial-ppp",

    # External packages for patching crates.io
    "external/mpu6050",
    "external/bmp388",
    "external/defmt-bbq"
]

[patch.crates-io]
mpu6050 = {path = "external/mpu6050"}
bmp388 = {path = "external/bmp388"}
# defmt-bbq = {path = "external/defmt-bbq"}
