[package]
name = "icarus-app-std"
version = "0.1.0"
authors = ["Natesh Narain <nnaraindev@gmail.com>"]
edition = "2018"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
pio = ["esp-idf-sys/pio"]

[dependencies]
icarus-wire = { path = "../icarus-wire" }
icarus-core = { path = "../icarus-core" }
esp-idf-sys = { version = "0.31.6", features = ["binstart"] }
esp-idf-hal = "0.38"
esp-idf-svc = "0.42"
embedded-svc = "0.22"
anyhow = "1"
embedded-hal = "=1.0.0-alpha.8"
embedded-hal-0-2 = { package = "embedded-hal", version = "0.2.7", features = ["unproven"] }
mpu6050 = "0.1.4"
defmt = "0.3"
defmt-bbq = { path = "../external/defmt-bbq" }
nb = "1"
getargs = { version = "0.5", default-features = false }

[build-dependencies]
embuild = "0.29"
anyhow = "1"
