cargo-features = ["per-package-target"]

[package]
name = "icarus-app"
version = "0.1.0"
edition = "2018"
forced-target = "thumbv7em-none-eabihf"

[dependencies]
icarus = {path = "../icarus"}
icarus-comms = {path = "../icarus-comms"}
cortex-m-rtic = "0.6.0-rc.4"
systick-monotonic = "0.1.0-rc.2"
panic-halt = "0.2"
heapless = "0.7.8"
