cargo-features = ["per-package-target"]

[package]
name = "icarus-app"
version = "0.1.0"
edition = "2018"
forced-target = "riscv32imc-unknown-none-elf"

[dependencies]
embassy = { path = "../external/embassy/embassy", version = "0.1.0", features = ["nightly", "time-tick-16mhz"] }
embassy-esp = {path = "../external/embassy/embassy-esp", version = "0.1.0"}
riscv-rt = "0.8"
icarus = {path = "../icarus"}
panic-halt = "0.2"
heapless = "0.7.8"
defmt = "0.3"
defmt-bbq = { path = "../external/defmt-bbq" }
