[package]
name = "icarus-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
icarus-wire = {path = "../icarus-wire"}
clap = {version = "3.0.0-rc.4", features = ["derive"]}
serialport = "4.0"
defmt-decoder = { version = "=0.3.1", features = ["unstable"] }
anyhow = "1.0"
ctrlc = "3.2"
