[package]
name = "icarus-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"]}
ahrs = { version = "0.5.0", default-features = false, features = ["field_access"]}
heapless = "0.7.15"
nalgebra = { version = "0.30", default-features = false}
