cargo-features = ["per-package-target"]

[package]
name = "icarus"
version = "0.1.0"
edition = "2018"
forced-target = "thumbv7em-none-eabihf"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.6"
stm32f3xx-hal = {version = "0.8", features = ["stm32f302x8", "rt"]}

shared-bus = "0.2.2"
mpu6050 = "0.1.4"
bmp388 = "0.1.0"
